# openvsp-mcp

./: LICENSE  README.md  pyproject.toml
examples/: openvsp_tool.py
src/openvsp_mcp/: __init__.py  __main__.py  core.py  describe.py  fastapi_app.py  models.py  tool.py
src/openvsp_mcp.egg-info/: PKG-INFO
src/openvsp_mcp/data/: rect_wing.vsp3
tests/: test_cli.py  test_core.py
