[project]
name = "openvsp-mcp"
version = "0.1.0"
description = "Domain-neutral MCP helpers for OpenVSP and VSPAero automation"
authors = [{ name = "OpenVSP MCP Maintainers" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.20",
    "fastapi>=0.119,<1.0",
    "pydantic>=2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6.7",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/Three-Little-Birds/openvsp-mcp"
Repository = "https://github.com/Three-Little-Birds/openvsp-mcp"

[project.scripts]
openvsp-mcp = "openvsp_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
